<resources>
    <string name="app_name">SmartRoom</string>

    <!--Navigation Drawer-->
    <string name="nav_simple_color_picker">Simple Color Picker</string>
    <string name="nav_color_palettes">Color Palettes</string>
    <string name="nav_party_mode">Party Mode</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_dev_settings">Developer Settings</string>
    <string name="nav_about">About</string>
    <!--Later: 2017.06.01-->
    <string name="nav_connect_device">Connect Device</string>


    <!--Simple Mode Fragment-->
    <string name="set_color">Set Color</string>


    <!--Party Mode Fragment-->
    <string name="tap_to_stop">Tap to stop</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>

    <!--Visualizer Fragment-->
    <string name="nav_visualizer">Audio Visualizer</string>

    <!--Settings Fragment-->
    <string name="settings">Settings</string>

    <string name="led_strip">LED Strip</string>
    <string name="led_strip_pref_title">Local network IP address</string>
    <string name="led_strip_pref_description">Set the local network address of the Led Strip</string>
    <string name="default_led_strip_ip">192.168.0.30</string>

    <string name="notifications">Notifications</string>
    <string name="visual_notification_pref_title">Visual Notifications</string>
    <string name="visual_notification_pref_description">Led Strip will blink on notification arrival</string>
    <string name="incoming_call_color_pref_description">Choose notification color</string>
    <string name="incoming_call_color_pref_title">Incoming Call Color</string>
    <string name="sms_color_pref_description">Choose notification color</string>
    <string name="sms_color_pref_title">Incoming SMS Color</string>

    <string name="simple_color_picking_mode">Simple Color Picking Mode</string>
    <string name="simple_color_picking_pref_title">Continuous Color Picking</string>
    <string name="simple_color_picking_pref_description">Automatically sets the color, hides button</string>

    <string name="default_starting_screen">Default Starting Screen</string>
    <string name="default_fragment_pref_title">Choose Starting Screen</string>

    <!--I do not know which method is better-->
    <!--<string name="pref_key_led_strip_address">pref_key_led_strip_address</string>-->
    <!--<string name="pref_key_default_fragment">pref_key_default_fragment</string>-->
    <!--<string name="pref_key_visual_notification">pref_key_visual_notification</string>-->
    <!--<string name="pref_key_incoming_call_color">pref_key_incoming_call_color</string>-->
    <!--<string name="pref_key_sms_color">pref_key_sms_color</string>-->
    <!--<string name="pref_auto_color_picking_mode">pref_auto_color_picking_mode</string>-->
    <!--<string name="default_led_strip_ip">192.168.1.3</string>-->


    <!--Developer Settings Fragment-->
    <string name="dev_settings">Developer Settings</string>

    <string name="debug">Debug</string>
    <string name="debug_mode_pref_description">Shows the hue, saturation, value values on the party mode Fragment</string>
    <string name="debug_mode_pref_title">Debug Mode</string>

    <string name="party_mode_fragment_settings">Party Mode Fragment Settings</string>
    <string name="hue_axis_pref_description">Select the Axis with you want to change the Hue</string>
    <string name="hue_axis_pref_title">Hue Axis</string>
    <string name="saturation_axis_pref_description">Select the Axis with you want to change the Saturation</string>
    <string name="saturation_axis_pref_title">Saturation Axis</string>
    <string name="value_axis_pref_description">Select the Axis with you want to change the Value</string>
    <string name="value_axis_pref_title">Value Axis</string>
    <string name="color_changing_sensitivity_title">Color changing sensitivity</string>


    <!--About Fragment-->
    <string name="about">About</string>
    <string name="app_version">v1.0.1 - stable</string>
    <string name="developed_by"><![CDATA[DEVELOPED & DESIGNED BY]]></string>
    <string name="author">Daniel Tar - GUTOY7</string>

    <!--Network Error Fragment-->
    <string name="no_wifi_connection_title">No Wifi Network</string>
    <string name="no_wifi_connection_description">Connect the same network as the LED Strip is connected!</string>
    <string name="no_wifi_connection_button_text">Connect</string>


    <!--Permission messages-->
    <string name="permission_denied">Permissions Denied</string>
    <string name="permission_denied_description">You have to accept permissions, if you want to use visual notifications. Please try again.</string>
    <string name="permission_denied_btn_text">OK</string>

    <!--Log messages-->
    <string name="tag_nr">Notification Receiver</string>
    <string name="tag_nr_description">can not access telephony manager</string>
    <string name="tag_is">UDP Intent Service</string>
    <string name="tag_is_description_ip_set">Local ip set to:</string>
    <string name="tag_is_description">Error sending package!</string>
    <string name="tag_frag_party_mode">frag_party_mode</string>
    <string name="tag_frag_party_mode_description">No party mode fragment</string>
    <string name="tag_frag_color_picker_simple_mode">simpleColorSelected</string>
    <string name="tag_frag_color_picker_auto_mode">autoColorPicking</string>
    <string name="tag_frag_color_picker">simpleMode</string>
    <string name="tag_frag_color_picker_error">There is no simple mode Fragment!</string>

    <!--UDP Intent Service messages-->

    <string name="udp_connection_error">Error in UDP connection!</string>
    <string name="set_ip_error">Could not set the IP (Unknown Host)</string>
    <string name="mode_incoming_call">mode: incoming_call</string>
    <string name="mode_sms_received">mode: sms_received</string>
    <string name="mode_simple">mode: simple</string>
    <string name="mode_auto">mode: auto</string>


    <!--Other-->
    <string name="navigation_drawer_open">open nav drawer</string>
    <string name="navigation_drawer_close">close nav drawer</string>
    <string name="bg_color">background_color</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>


    <!-- - - - - - - - - - - - - - - -
              - Visualizer  -
              - - - - - - - - - - - - - - - -->
    <string name="action_settings">Settings</string>
    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->

    <!-- Label for the show bass checkbox preference -->
    <string name="pref_show_bass_label">Show Bass</string>
    <!-- Key name for storing bass in SharedPreferences -->
    <string name="pref_show_bass_key" translatable="false">show_bass</string>

    <!-- Label for the show mid range checkbox preference -->
    <string name="pref_show_mid_range_label">Show Mid Range</string>
    <!-- Key name for storing mid range in SharedPreferences -->
    <string name="pref_show_mid_range_key" translatable="false">show_mid_range</string>

    <!-- Label for the show treble checkbox preference -->
    <string name="pref_show_treble_label">Show Treble</string>
    <!-- Key name for storing treble in SharedPreferences -->
    <string name="pref_show_treble_key" translatable="false">show_treble</string>

    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>


    <!-- Label for the size preference -->
    <string name="pref_size_label">Size Multiplier</string>

    <!-- Key name for storing size in SharedPreferences -->
    <string name="pref_size_key" translatable="false">size</string>

    <!-- Default for size preference -->
    <string name="pref_size_default" translatable="false">1</string>


    <!-- Label for the color preference -->
    <string name="pref_color_label">Shape Color</string>

    <!-- Label for red color preference -->
    <string name="pref_color_label_red">Red</string>
    <!-- Label for blue color preference -->
    <string name="pref_color_label_blue">Blue</string>
    <!-- Label for green color preference -->
    <string name="pref_color_label_green">Green</string>

    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_color_key" translatable="false">color</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="visualizer_pref_title">Visualizer</string>
    <string name="clear_pal">Clear Palette</string>
    <string name="palette1">Initial Palette</string>
    <string name="palette2">Rainbow Palette</string>
    <string name="palette3">Rainbow Stripe Palette</string>
    <string name="palette4">Party Palette</string>
    <string name="palette5">Heat Palette</string>
    <string name="palette6">Fire Palette</string>
    <string name="palette7">Hungarian Flag</string>
    <string name="palette8">Romanian Flag</string>


    <string name="network_error">Network Error</string>


</resources>
