<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_led_strip"
        android:title="@string/led_strip">
        <EditTextPreference
            android:defaultValue="@string/default_led_strip_ip"
            android:key="pref_key_led_strip_address"
            android:summary="@string/led_strip_pref_description"
            android:title="@string/led_strip_pref_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_notifications"
        android:title="@string/notifications">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_visual_notification"
            android:summary="@string/visual_notification_pref_description"
            android:title="@string/visual_notification_pref_title" />
        <com.application.tardaniel.smartroom.preferencecomponents.DialogColorPickerPreference
            android:defaultValue="f8ff00"
            android:dependency="pref_key_visual_notification"
            android:key="pref_key_incoming_call_color"
            android:summary="@string/incoming_call_color_pref_description"
            android:title="@string/incoming_call_color_pref_title" />
        <com.application.tardaniel.smartroom.preferencecomponents.DialogColorPickerPreference
            android:defaultValue="ec00ff"
            android:dependency="pref_key_visual_notification"
            android:key="pref_key_sms_color"
            android:summary="@string/sms_color_pref_description"
            android:title="@string/sms_color_pref_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_pick_mode"
        android:title="@string/simple_color_picking_mode">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_auto_color_picking_mode"
            android:summary="@string/simple_color_picking_pref_description"
            android:title="@string/simple_color_picking_pref_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_visualizer"
        android:title="@string/visualizer_pref_title">
        <CheckBoxPreference
            android:defaultValue="@bool/pref_show_bass_default"
            android:key="@string/pref_show_bass_key"
            android:summaryOff="@string/pref_show_false"
            android:summaryOn="@string/pref_show_true"
            android:title="@string/pref_show_bass_label" />

        <CheckBoxPreference
            android:defaultValue="@bool/pref_show_mid_range_default"
            android:key="@string/pref_show_mid_range_key"
            android:summaryOff="@string/pref_show_false"
            android:summaryOn="@string/pref_show_true"
            android:title="@string/pref_show_mid_range_label" />

        <CheckBoxPreference
            android:defaultValue="@bool/pref_show_treble_default"
            android:key="@string/pref_show_treble_key"
            android:summaryOff="@string/pref_show_false"
            android:summaryOn="@string/pref_show_true"
            android:title="@string/pref_show_treble_label" />

        <EditTextPreference
            android:defaultValue="@string/pref_size_default"
            android:key="@string/pref_size_key"
            android:title="@string/pref_size_label" />

        <ListPreference
            android:defaultValue="@string/pref_color_red_value"
            android:entries="@array/pref_color_option_labels"
            android:entryValues="@array/pref_color_option_values"
            android:key="@string/pref_color_key"
            android:title="@string/pref_color_label" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_default_fragment"
        android:title="@string/default_starting_screen">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/default_fragments"
            android:entryValues="@array/default_fragments_values"
            android:key="pref_key_default_fragment"
            android:title="@string/default_fragment_pref_title" />
    </PreferenceCategory>

</PreferenceScreen>
