<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.application.tardaniel.smartroom.fragments.NetworkErrorFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/no_wifi_connection_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingEnd="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:paddingStart="10dp"
        android:text="@string/no_wifi_connection_description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:padding="10dp"
        android:text="@string/no_wifi_connection_button_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</LinearLayout>

